--- a/css/styles.css
+++ b/css/styles.css
@@ -249,3 +249,22 @@ h1.slider span{
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;         /* Opera/IE 8+ */
 }
+
+.bloc-profil {
+  border: 1px solid #d2d3d5;
+  padding: 20px 20px 3px 20px;
+  border-radius: 3px;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+.bloc-profil h3{
+  margin: 0;
+  color: #444;
+}
+.bloc-profil img {
+  border-radius: 300px;
+  margin-right: 20px;
+  float: left;
+}
