--- a/css/slim.css
+++ b/css/slim.css
@@ -1158,7 +1158,9 @@ button:focus {
   height: 40px;
   display: block;
   -webkit-appearance: none;
-  padding: 22px 12px;
+  padding: 15px 12px;
+  height: 100%;
+  width: 100%;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;         /* Opera/IE 8+ */
