--- a/css/slim.css
+++ b/css/slim.css
@@ -1143,7 +1143,7 @@ button:focus {
 }
 .input{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1;
+  line-height: 1.42857;
   font-size: 14px;
   background: #fff;
   box-shadow: none;
@@ -1158,8 +1158,8 @@ button:focus {
   height: 40px;
   display: block;
   -webkit-appearance: none;
-  padding: 15px 12px;
-  height: 100%;
+  padding: 12px 12px;
+  height: 46px;
   width: 100%;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
