--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -109,10 +109,12 @@ a.doc-link:hover {
   color: #7F8C8D;
 }
 
-#nav-principal{
+#nav-principal,
+#nav-index {
   margin-bottom: 0;
 }
-#nav-principal ul li a{ 
+#nav-principal ul li a,
+#nav-index ul li a{ 
   padding: 20px 20px;
   font-weight: 500;
   font-size: 14px;
@@ -124,7 +126,8 @@ a.doc-link:hover {
   padding: 13px 30px;
 }
 
-#nav-principal ul li a:hover{
+#nav-principal ul li a:hover,
+#nav-index ul li a:hover{
   color: #2c3e50;
 }
 
@@ -142,6 +145,13 @@ a.doc-link:hover {
   color: #ffffff;
 }
 
+#nav-index{ 
+  margin: 20px 0 30px;
+}
+
+#nav-index ul li a{ 
+  color: #ffffff;
+}
 
 #nav-side ul li a{ 
   padding: 10px 15px;
