--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -306,7 +306,7 @@ ul.changelog{
 }
 
 ul.changelog li{
-  margin: 0 0 3px 0;
+  margin: 0 0 5px 0;
   list-style-type: none;
 }
 
@@ -322,6 +322,7 @@ ul.changelog li{
   line-height: 11px;
   padding: 3px 6px 2px;
   display: inline-block;
+  border-radius: 3px;
 }
 
 span.added {
