--- a/app/css/slim.css
+++ b/app/css/slim.css
@@ -4,8 +4,8 @@
 **************************************************************************************/
 
 /** 
- * Version : v0.36
- * Last Update : 31/10/2014
+ * Version : v0.37
+ * Last Update : 24/12/2014
  * Oficial website : http://slim-css.com
  * Documentation : http://slim-css.com/grille.php
  */
@@ -1546,6 +1546,101 @@ a.icons {
 }
 .btn-grey:hover{
   background: #7f8c8d
+}
+
+
+/* = Différents style boutons 3D
+-----------------------------------------------------------------------------*/
+
+.btn-green-3d {
+  background: #2ecc71;
+  box-shadow:0px 4px 0px #27AE60;
+}
+.btn-green-3d:hover,
+.btn-green-3d:visited,
+.btn-green-3d:focus{
+  background: #27AE60;
+  box-shadow:0px 2px 0px #16703B;
+}
+.btn-green-3d:active{
+  background: #27AE60;
+  box-shadow:0px 0px 0px;
+}
+
+.btn-red-3d {
+  background: #e74c3c;
+  box-shadow:0px 4px 0px #C0392B;
+}
+.btn-red-3d:hover,
+.btn-red-3d:visited,
+.btn-red-3d:focus {
+  background: #C0392B;
+  box-shadow:0px 2px 0px #77241C;
+}
+.btn-red-3d:active {
+  background: #C0392B;
+  box-shadow:0px 0px 0px;
+}
+
+.btn-blue-3d {
+  background: #3498db;
+  box-shadow:0px 4px 0px #2980b9 ;
+}
+.btn-blue-3d:hover,
+.btn-blue-3d:visited,
+.btn-blue-3d:focus {
+  background: #2980b9;
+  box-shadow:0px 2px 0px #1F5577;
+}
+.btn-blue-3d:active{
+  background: #2980b9;
+  box-shadow:0px 0px 0px;
+}
+
+.btn-dark-3d {
+  background: #34495E;
+  box-shadow:0px 4px 0px #2C3E50;
+}
+.btn-dark-3d:hover,
+.btn-dark-3d:visited,
+.btn-dark-3d:focus {
+  background: #2C3E50;
+  box-shadow:0px 2px 0px #000000;
+}
+.btn-dark-3d:active{
+  background: #2C3E50;
+  box-shadow:0px 0px 0px;
+}
+
+.btn-disable-3d {
+  background: #ecf0f1;
+  color: #b2b2b2;
+  box-shadow:0px 4px 0px #bdc3c7;
+}
+.btn-disable-3d:hover,
+.btn-disable-3d:visited,
+.btn-disable-3d:focus {
+  background: #bdc3c7;
+  box-shadow:0px 2px 0px #74777A;
+}
+.btn-disable-3d:active{
+  background: #bdc3c7;
+  box-shadow:0px 0px 0px;
+}
+
+.btn-grey-3d {
+  background: #95a5a6;
+  box-shadow:0px 4px 0px #7f8c8d;
+}
+.btn-grey-3d:hover,
+.btn-grey-3d:visited,
+.btn-grey-3d:focus {
+  background: #7f8c8d;
+  box-shadow:0px 2px 0px #454C4C;
+}
+.btn-grey-3d:active{
+  background: #7f8c8d;
+  box-shadow:0px 0px 0px;
 }
 
 /*
