--- a/css/slim.css
+++ b/css/slim.css
@@ -5,8 +5,8 @@
 
 /** 
  * @project        SLIM CSS FRAMEWORK
- * @version        v0.38
- * @lastmodified   Fev, 12 2015
+ * @version        v0.39
+ * @lastmodified   Apr, 19 2015
  * @media          print, screen
  * @author         Nicolas Verlhiac
  * @site           http://slim-css.com
